# dex-analyzer-for-llm

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  pyproject.toml
.claude/: dad-reminder.sh  docs-precommit-check.sh  py-quality.sh  review-precommit-check.sh  settings.json
.claude/skills/dexkit-bench/: SKILL.md
.claude/skills/dexkit-build/: SKILL.md
.claude/skills/dexkit-decompile/: SKILL.md
.claude/skills/dexkit-diff/: SKILL.md
.claude/skills/dexkit-sweep/: SKILL.md
.claude/skills/dexkit-trace/: SKILL.md
.claude/skills/jadx-diff/: SKILL.md
.github/workflows/: ci.yml  release.yml
bench/: README.md  bench_vs_androguard.py
dex_analyzer/: CMakeLists.txt  README.md  pyproject.toml
dex_analyzer/binding/: module.cpp
dex_analyzer/core_ext/: dexitem_code_source.cpp  dexkit_ext.cpp
dex_analyzer/dad_cpp/: control_flow.cpp  dast.cpp  decompiler.cpp  instruction_accept.cpp  instruction_dispatch.cpp  mock_code_source.cpp  node.cpp  writer.cpp
dex_analyzer/dad_cpp/include/: basic_blocks.h  dast.h  decompile.h  dex_code_source.h  graph.h  instruction.h  mock_code_source.h  node.h
dex_analyzer/python/dexkit_py/: __init__.py  capability.py  format.py  mcp_server.py  safe.py  server.py  tools.py
dex_analyzer/python/dexllm/: __init__.py  capability.py  filters.py  mcp_server.py  server.py  tools.py
dex_analyzer/tests/: dvclass_parity.py  llm_backend_integration.py
dex_analyzer/tests/parity/: control_flow_parity_test.cpp  instr_chunk1_parity_test.cpp  instr_chunk2_parity_test.cpp  instr_chunk3_parity_test.cpp  node_parity_test.cpp  opcode_chunkB_parity_test.cpp  opcode_chunkD_parity_test.cpp  util_parity_test.cpp
dexkit_git/Core/dexkit/: dex_item.cpp
dexkit_git/build-support/linux-sysroot/: README.md  build-linux-sysroot.sh  fetch-libstdcxx-headers.sh  glibc-libstdcxx10-compat.h
dexkit_git/build-support/linux-sysroot/gcc5-thread-wrapper/: future.in  thread.in
dexkit_git/dexkit/: build.gradle
dexkit_git/dexkit-dev/: build.gradle
dexkit_git/dexkit/src/main/cpp/: CMakeLists.txt  native-bridge.cpp
docs/: RELEASING.md  aosp-oob-divergences.md  api.md  architecture.md  dexkit-vs-art-dex-handling.md  hexagonal.md  sdk.md  ssa-design.md  type-inference-design.md  type-inference-v2-design.md  usage.md  windows-port-plan.md  workflow.md
examples/: 01_overview.py  02_decompile.py  03_search.py  04_decompile_dex.py  05_extract_iocs.py  README.md  _common.py
native/binding/: module.cpp
native/core_ext/: analysis.cpp  dex_verifier.cpp  dexitem_code_source.cpp  dexkit_ext.cpp  ioc.cpp  public_suffix.cpp
native/core_ext/include/: analysis.h  api_ref.h  dex_verifier.h  dexitem_code_source.h  dexkit_ext.h  public_suffix.h
native/dad_cpp/: basic_blocks.cpp  control_flow.cpp  dast.cpp  dataflow.cpp  decompile.cpp  decompiler.cpp  graph.cpp  instruction.cpp  instruction_accept.cpp  method_snapshot_builder.cpp  mutf8.cpp  node.cpp  opcode_ins.cpp  ssa.cpp  writer.cpp
native/dad_cpp/include/: basic_blocks.h  dast.h  dataflow.h  decompile.h  decompiler.h  dex_code_source.h  instruction.h  instruction_dispatch.h  mutf8.h  opcode_ins.h  ssa.h  visitor.h  writer.h
new_dexkit/: CMakeLists.txt  README.md  pyproject.toml
new_dexkit/binding/: module.cpp
new_dexkit/core_ext/: dexitem_code_source.cpp
new_dexkit/core_ext/include/: dexitem_code_source.h  dexkit_ext.h
new_dexkit/dad_cpp/: basic_blocks.cpp  control_flow.cpp  dast.cpp  decompile.cpp  decompiler.cpp  graph.cpp  instruction.cpp  method_snapshot_builder.cpp  opcode_ins.cpp  util.cpp
new_dexkit/dad_cpp/include/: basic_blocks.h  control_flow.h  dast.h  dataflow.h  decompiler.h  dex_code_source.h  method_snapshot.h  util.h  writer.h
new_dexkit/python/dexkit_py/: __init__.py  _enrich.py  descriptors.py
new_dexkit/tests/parity/: CMakeLists.txt  basic_blocks_parity_test.cpp  construct_parity_test.cpp  dataflow_parity_test.cpp  instr_chunk1_parity_test.cpp  instr_chunk2_parity_test.cpp  instr_chunk3_parity_test.cpp  instr_chunk4_parity_test.cpp  instr_chunk6_parity_test.cpp  instr_chunk7_parity_test.cpp  method_snapshot_parity_test.cpp  node_parity_test.cpp  opcode_chunkC_parity_test.cpp  opcode_chunkE_parity_test.cpp  opcode_chunkF_parity_test.cpp  util_parity_test.cpp  writer_parity_test.cpp
scripts/: check_dad_boundary.sh  gen_android_api_data.py  gen_content_uris_data.py  gen_perm_api_data.py  gen_perm_data.py  gen_psl_data.py  gen_word_ranges.py  jadx_parity.py  jadx_ref.py  make_portable_zip.sh
src/dexllm/: __init__.py  __init__.pyi  _dexkit_core.pyi  _enrich.py  capability.py  dangerous_api.py  descriptors.py  filters.py  format.py  ioc.py  mcp_server.py  packer.py  providers.py  safe.py  server.py  tools.py
src/dexllm/data/: android_api_map.json  content_uris.json  dangerous_perm_api.json  perm_api.json  perm_levels.json
src/dexllm/hexagonal/: README.md  __init__.py  adapter.py  model.py  ports.py
src/dexllm/sdk/: __init__.py  adapter.py  model.py  ports.py
tests/: README.md  conftest.py  dvclass_parity.py  jadx_parity_baseline.json  llm_backend_integration.py  test_capability_native.py  test_cascade_type.py  test_clinit.py  test_clinit_tail_oracle.py  test_dangerous_api.py  test_dexkit.py  test_hexagonal.py  test_ioc.py  test_ioc_native.py  test_jadx_parity.py  test_lenient_verify.py  test_mcp_server.py  test_multisource.py  test_packer.py  test_pc_line_map.py  test_pc_line_map_headers.py  test_pc_map_coverage.py  test_permission_callers.py  test_return_literals.py  test_sdk.py  test_stubs.py  test_this_reuse.py  test_tools.py  test_verifier_oob.py  test_verify_api.py
tests/parity/: CMakeLists.txt  dast_parity_test.cpp  dataflow_parity_test.cpp  dex_verifier_parity_test.cpp  dispatch_parity_test.cpp  graph_parity_test.cpp  instr_chunk1_parity_test.cpp  instr_chunk2_parity_test.cpp  instr_chunk3_parity_test.cpp  instr_chunk5_parity_test.cpp  instr_chunk8_parity_test.cpp  mutf8_parity_test.cpp  node_parity_test.cpp  opcode_chunkA_parity_test.cpp  psl_parity_test.cpp  return_literal_parity_test.cpp  ssa_parity_test.cpp  util_parity_test.cpp  writer_parity_test.cpp
