[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.13"]
build-backend = "scikit_build_core.build"

[project]
name = "dexllm"
version = "0.1.8"
description = "LLM-facing DEX/APK analyzer — pybind11 wrapper around DexKit Core with an embedded DAD-aligned Java decompiler, MCP server, and FastAPI/SSE backend"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "dex-analyzer-for-llm contributors" }]
keywords = ["android", "apk", "dex", "decompiler", "static-analysis", "androguard", "dexkit", "mcp", "llm"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Topic :: Security",
    "Topic :: Software Development :: Disassemblers",
    "License :: OSI Approved :: Apache Software License",
]
# Core (`import dexllm`) has no Python runtime deps — the analyzer is native.
dependencies = []

[project.optional-dependencies]
# MCP stdio server (Claude Desktop / Cursor / Continue): `python -m dexllm.mcp_server`
mcp = ["mcp>=1.0"]
# FastAPI + SSE web backend: `uvicorn dexllm.server:app`
server = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "sse-starlette>=2.0",
    "python-multipart>=0.0.9",
    "anthropic>=0.40",
]
# Static C2 / IOC extraction (dexllm.extract_iocs): public-suffix domain
# validation. (Defang + indicator regexes are in-tree and ReDoS-bounded;
# iocextract was evaluated and dropped — its regexes ReDoS on dex blobs.)
ioc = ["tldextract>=5.0"]
# Everything LLM-facing (MCP + server + agent + IOC).
all = ["dexllm[mcp,server,ioc]"]
# Tests + parity/bench tooling. androguard is the decompile parity ground truth.
dev = [
    "pytest>=8.0",
    "androguard>=4.1",
    "black>=25.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "tldextract>=5.0",
]

[project.scripts]
dexllm-mcp = "dexllm.mcp_server:main"

[tool.scikit-build]
minimum-version = "build-system.requires"
cmake.version = ">=3.20"
ninja.make-fallback = false
wheel.packages = ["src/dexllm"]
wheel.install-dir = "dexllm"
build-dir = "build/{wheel_tag}"

[tool.scikit-build.cmake.define]
# Override if vendored DexKit Core lives elsewhere.
# DEXKIT_CORE_ROOT = "/abs/path/to/vendor/dexkit_core"

# --- Pre-built wheels (cibuildwheel; driven by .github/workflows/release.yml) ---
[tool.cibuildwheel]
build = "cp39-* cp310-* cp311-* cp312-* cp313-*"
# musllinux: vendored C++20 core + Alpine toolchain is extra hassle; glibc
# manylinux covers the server/analysis fleet. PyPy: native ext, skip.
skip = "*-musllinux* pp*"
# Smoke the wheel post-build: native ext imports + content-probe runs.
test-command = 'python -c "import dexllm; print(dexllm.__version__); dexllm.identify(\"/etc/hostname\")"'

[tool.cibuildwheel.linux]
# C++20 needs a modern GCC — manylinux_2_28 ships GCC 12 (the default 2014 image's
# GCC 10 is too old for parts of the slicer/dad_cpp C++20).
manylinux-x86_64-image = "manylinux_2_28"
archs = ["x86_64"]
before-all = "dnf install -y zlib-devel || yum install -y zlib-devel"

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]
# 13.3 (not lower): dad_cpp/dast.cpp uses std::to_chars for float/double, whose
# libc++ symbol is only available from macOS 13.3 — a lower target fails to build.
environment = { MACOSX_DEPLOYMENT_TARGET = "13.3" }

# --- Python code quality (PEP 8 / PEP 484) ---

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
# E/W = pycodestyle (PEP 8), F = pyflakes (correctness), I = isort (import order),
# D = pydocstyle (PEP 257 docstring conventions).
select = ["E", "W", "F", "I", "D"]
# E501 (line length) is owned by Black; let the formatter handle wrapping.
ignore = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.mypy]
files = ["src/dexllm"]
# The native extension (`_dexkit_core`) and optional deps (androguard, mcp,
# fastapi) ship no type stubs — don't fail on their missing imports.
ignore_missing_imports = true
# PEP 484: require every function in the package to carry annotations.
disallow_untyped_defs = true

# Optional LLM-backend deps are checked behind `dexllm.tools`'s own typed
# surface; skip following into their (untyped, dynamically-shaped) SDK objects
# so the result is deterministic whether or not the extras are installed.
[[tool.mypy.overrides]]
module = [
    "anthropic.*",
    "fastapi.*",
    "sse_starlette.*",
    "mcp.*",
    "androguard.*",
    "uvicorn.*",
]
follow_imports = "skip"

[tool.ruff.lint.per-file-ignores]
# These scripts must call `logger.remove()` to silence androguard's INFO spam
# before importing androguard — a deliberate import-after-statement (E402).
"bench/bench_vs_androguard.py" = ["E402"]
"tests/dvclass_parity.py" = ["E402"]
# Docstrings (D) are enforced on the package only; example/bench/test scripts
# are self-documenting harnesses, not a public API surface.
"examples/*" = ["D"]
"bench/*" = ["D"]
"tests/*" = ["D"]
