[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.13"]
build-backend = "scikit_build_core.build"

[project]
name = "dexllm"
version = "0.0.1"
description = "LLM-facing DEX/APK analyzer — pybind11 wrapper around DexKit Core with an embedded DAD-aligned Java decompiler, MCP server, and FastAPI/SSE backend"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "dex-analyzer-for-llm contributors" }]

[tool.scikit-build]
minimum-version = "build-system.requires"
cmake.version = ">=3.20"
ninja.make-fallback = false
wheel.packages = ["python/dexllm"]
wheel.install-dir = "dexllm"
build-dir = "build/{wheel_tag}"

[tool.scikit-build.cmake.define]
# Override if vendored DexKit Core lives elsewhere.
# DEXKIT_CORE_ROOT = "/abs/path/to/vendor/dexkit_core"
